statistic line heigt fix and footer nav align

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -210,13 +210,13 @@ header span {
 .stats .stats__informations {
   display: flex;
   font-size: 12px;
-  line-height: none;
 }
 .stats .stats__informations ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  line-height: 14.52px;
   margin: auto;
   color: #FFF;
 }
@@ -230,22 +230,22 @@ header span {
 .stats__informations--invoices {
   background-color: #4D4CAC;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  width: 75px;
+  height: 75px;
 }
 
 .stats__informations--contacts {
   background-color: #9698D6;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  width: 75px;
+  height: 75px;
 }
 
 .stats__informations--companies {
   background-color: #FF808B;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  width: 75px;
+  height: 75px;
 }
 
 .table-container-dashboard {
@@ -722,6 +722,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 @media screen and (min-width: 1080px) {
   #footer-navbar-container {
@@ -736,16 +737,10 @@ footer {
   }
 }
 
-@media screen and (min-width: 1080px) {
-  #footer-text-gris-container {
-    justify-self: flex-end;
-  }
-}
-
 #footer-navbar a {
   font-family: "Assistant", sans-serif;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
   text-decoration: none;
   text-transform: uppercase;
   margin-right: 5px;
@@ -775,7 +770,6 @@ footer {
   font-family: "Assistant", sans-serif;
   font-weight: 400;
   font-size: 14px;
-  margin-top: 10px;
 }
 @media screen and (min-width: 1080px) {
   .footer-text-gris {
